refactor: standardise navigation and footer across all pages

--- a/garden-maintenance.html
+++ b/garden-maintenance.html
@@ -23,8 +23,14 @@
                 <li><a href="six-week.html">Six Week Courses</a></li>
                 <li><a href="six-month.html">Six Month Courses</a></li>
                 <li><a href="cal.html">Calculator</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
+            <div class="burger-menu" onclick="toggleMobileMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
 
@@ -205,30 +211,30 @@
                     </div>
                     <span class="logo-text">Empowering the Nation</span>
                 </a>
+                <p style="margin-top: 1rem; color: #ccc;">Empowering individuals with practical skills for professional growth.</p>
             </div>
             <div class="footer-section">
-                <h3>Courses</h3>
+                <h3>Six-Month Courses</h3>
                 <ul>
-                    <li><a href="six-month.html">Six Month Courses</a></li>
-                    <li><a href="six-week.html">Six Week Courses</a></li>
-                    <li><a href="shop.html">All Courses</a></li>
-                    <li><a href="cal.html">Fee Calculator</a></li>
+                    <li><a href="first-aid.html">First Aid</a></li>
+                    <li><a href="sewing.html">Sewing</a></li>
+                    <li><a href="landscaping.html">Landscaping</a></li>
+                    <li><a href="life-skills.html">Life Skills</a></li>
                 </ul>
             </div>
             <div class="footer-section">
-                <h3>Support</h3>
+                <h3>Six-Week Courses</h3>
                 <ul>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="#">Help Center</a></li>
-                    <li><a href="#">Student Portal</a></li>
+                    <li><a href="child-minding.html">Child Minding</a></li>
+                    <li><a href="cooking.html">Cooking</a></li>
+                    <li><a href="garden-maintenance.html">Garden Maintenance</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>Company</h3>
                 <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">News</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
