--- a/six-month.html
+++ b/six-month.html
@@ -23,8 +23,14 @@
                 <li><a href="six-week.html">Six Week Courses</a></li>
                 <li><a href="six-month.html">Six Month Courses</a></li>
                 <li><a href="cal.html">Calculator</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
+            <div class="burger-menu" onclick="toggleMobileMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
 
@@ -106,46 +112,41 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
-                <a href="#" class="logo" style="color: white;">
+                <a href="index.html" class="logo" style="color: white;">
                     <div class="logo-icon">
                         <img src="./src/logo.png" alt="Empowering the Nation Logo" class="footer-logo">
                     </div>
                     <span class="logo-text">Empowering the Nation</span>
                 </a>
+                <p style="margin-top: 1rem; color: #ccc;">Empowering individuals with practical skills for professional growth.</p>
             </div>
             <div class="footer-section">
                 <h3>Six-Month Courses</h3>
                 <ul>
-                    <li><a href="#">First Aid</a></li>
-                    <li><a href="#">Sewing</a></li>
-                    <li><a href="#">Landscaping</a></li>
-                    <li><a href="#">Life Skills</a></li>
+                    <li><a href="first-aid.html">First Aid</a></li>
+                    <li><a href="sewing.html">Sewing</a></li>
+                    <li><a href="landscaping.html">Landscaping</a></li>
+                    <li><a href="life-skills.html">Life Skills</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>Six-Week Courses</h3>
                 <ul>
-                    <li><a href="#">Child Minding</a></li>
-                    <li><a href="#">Cooking</a></li>
-                    <li><a href="#">Garden Maintenance</a></li>
+                    <li><a href="child-minding.html">Child Minding</a></li>
+                    <li><a href="cooking.html">Cooking</a></li>
+                    <li><a href="garden-maintenance.html">Garden Maintenance</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>Company</h3>
                 <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
             <p>Copyright © Empowering the Nation 2025. All Rights Reserved</p>
-            <div class="social-links">
-                <a href="#"><span>📘</span></a>
-                <a href="#"><span>📷</span></a>
-                <a href="#"><span>🐦</span></a>
-            </div>
         </div>
     </footer>
 
